force-app/main/default/objects/Hoja_de_Calificaci_n_An_lisis_Financiero__c/Hoja_de_Calificaci_n_An_lisis_Financiero__c.object-meta.xml
<CustomObject>
    <description>Contiene los campos para determinar la calificación financiera de la cuenta</description>
    <label>Hoja de Calificación Análisis Financiero</label>
    <nameField>
        <label>Hoja de Calificación Análisis Financiero Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hoja de Calificación Análisis Financiero</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>