force-app/main/default/objects/Hoja_de_Calificaci_n_An_lisis_Financiero__c/fields/A_os_de_Antig_edad_de_La_Empresa__c.field-meta.xml
<CustomField>
    <fullName>A_os_de_Antig_edad_de_La_Empresa__c</fullName>
    <label>¿Años de Antigüedad de La Empresa?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>