force-app/main/default/objects/Hoja_de_Calificaci_n_An_lisis_Financiero__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Hoja de Calificación Análisis Financiero</relationshipLabel>
    <relationshipName>Hoja_de_Calificaci_n_An_lisis_Financiero</relationshipName>
    <type>Lookup</type>
</CustomField>