force-app/main/default/objects/Hoja_de_Calificaci_n_An_lisis_Financiero__c/fields/Calculo_Nivel_Endeudamiento__c.field-meta.xml
<CustomField>
    <fullName>Calculo_Nivel_Endeudamiento__c</fullName>
    <formula>Total_Pasivo__c /  Total_Activo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cálculo Nivel Endeudamiento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>