force-app/main/default/objects/Hoja_de_Calificaci_n_An_lisis_Financiero__c/fields/Calculo_Relaci_n_Deuda_Ingreso__c.field-meta.xml
<CustomField>
    <fullName>Calculo_Relaci_n_Deuda_Ingreso__c</fullName>
    <formula>Total_Pasivo__c /  Ingresos_Oper__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cálculo Relación Deuda - Ingreso</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>