force-app/main/default/objects/Hoja_de_Calificaci_n_An_lisis_Financiero__c/fields/Calificaci_n_de_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Calificaci_n_de_Cliente__c</fullName>
    <formula>IF( Puntuaci_n_Conocimiento_del_Cliente__c  = &quot;No Recomendado&quot; ||  Puntuaci_n_Historial_Crediticio__c = &quot;No Recomendado&quot; ||  Puntuaci_n_Situaci_n_Endeudamiento__c = &quot;Crítico&quot;, &quot;No Recomendado&quot;, &quot;Recomendado&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calificación de Cliente</label>
    <type>Text</type>
</CustomField>