force-app/main/default/objects/Hoja_de_Calificaci_n_An_lisis_Financiero__c/fields/Demandas_ltimos_5_A_os__c.field-meta.xml
<CustomField>
    <fullName>Demandas_ltimos_5_A_os__c</fullName>
    <inlineHelpText>Referente a temas crediticios</inlineHelpText>
    <label># Demandas (Últimos 5 Años)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>