force-app/main/default/objects/Hoja_de_Calificaci_n_An_lisis_Financiero__c/fields/Ingresos_Oper__c.field-meta.xml
<CustomField>
    <fullName>Ingresos_Oper__c</fullName>
    <label>Ingresos Oper</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>