force-app/main/default/objects/Hoja_de_Calificaci_n_An_lisis_Financiero__c/fields/Nivel_de_Endeudamiento__c.field-meta.xml
<CustomField>
    <fullName>Nivel_de_Endeudamiento__c</fullName>
    <defaultValue>0.5</defaultValue>
    <label>Nivel de Endeudamiento</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>