force-app/main/default/objects/Hoja_de_Calificaci_n_An_lisis_Financiero__c/fields/Periodos_en_Mora_en_ltimo_A_o__c.field-meta.xml
<CustomField>
    <fullName>Periodos_en_Mora_en_ltimo_A_o__c</fullName>
    <label>¿Periodos en Mora en Último Año?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>