force-app/main/default/objects/Hoja_de_Calificaci_n_An_lisis_Financiero__c/fields/Presenta_reporte_en_listas_restrictivas__c.field-meta.xml
<CustomField>
    <fullName>Presenta_reporte_en_listas_restrictivas__c</fullName>
    <label>¿Reporte en Listas Restrictivas?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sí</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>