force-app/main/default/objects/Hoja_de_Calificaci_n_An_lisis_Financiero__c/fields/Puntuaci_n_Conocimiento_del_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Puntuaci_n_Conocimiento_del_Cliente__c</fullName>
    <formula>IF(( ISPICKVAL( Presenta_reporte_en_listas_restrictivas__c , &quot;Sí&quot;) ||  ISPICKVAL( Renovaci_n_de_C_mara_de_Comercio__c , &quot;No&quot;) ||  A_os_de_Antig_edad_de_La_Empresa__c &lt;=5 ), &quot;No Recomendado&quot;, &quot;Sin Restricciones&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Puntuación Conocimiento del Cliente</label>
    <type>Text</type>
</CustomField>