force-app/main/default/objects/Hoja_de_Calificaci_n_An_lisis_Financiero__c/fields/Puntuaci_n_Historial_Crediticio__c.field-meta.xml
<CustomField>
    <fullName>Puntuaci_n_Historial_Crediticio__c</fullName>
    <formula>IF(( Demandas_ltimos_5_A_os__c &gt;= 3 ||  Periodos_en_Mora_en_ltimo_A_o__c &gt;= 3), &quot;No Recomendado&quot;, &quot;Sin Restricciones&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Puntuación Historial Crediticio</label>
    <type>Text</type>
</CustomField>