force-app/main/default/objects/Hoja_de_Calificaci_n_An_lisis_Financiero__c/fields/Puntuaci_n_Situaci_n_Endeudamiento__c.field-meta.xml
<CustomField>
    <fullName>Puntuaci_n_Situaci_n_Endeudamiento__c</fullName>
    <formula>IF(((Calculo_Nivel_Endeudamiento__c* Nivel_de_Endeudamiento__c + Calculo_Relaci_n_Deuda_Ingreso__c* Relaci_n_Deuda_Ingreso__c ) ) &lt;= 0.4, &quot;Bajo&quot;,  IF(((Calculo_Nivel_Endeudamiento__c* Nivel_de_Endeudamiento__c + Calculo_Relaci_n_Deuda_Ingreso__c* Relaci_n_Deuda_Ingreso__c ) &gt;0.4 &amp;&amp; (Calculo_Nivel_Endeudamiento__c* Nivel_de_Endeudamiento__c + Calculo_Relaci_n_Deuda_Ingreso__c* Relaci_n_Deuda_Ingreso__c ) &lt;= 0.63), &quot;Moderada&quot;, IF((Calculo_Nivel_Endeudamiento__c* Nivel_de_Endeudamiento__c + Calculo_Relaci_n_Deuda_Ingreso__c* Relaci_n_Deuda_Ingreso__c ) &gt; 0.63 &amp;&amp; (Calculo_Nivel_Endeudamiento__c* Nivel_de_Endeudamiento__c + Calculo_Relaci_n_Deuda_Ingreso__c* Relaci_n_Deuda_Ingreso__c )  &lt;= 0.8, &quot;Alta&quot;,  &quot;Crítico&quot; ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Puntuación Situación Endeudamiento</label>
    <type>Text</type>
</CustomField>