force-app/main/default/objects/Hoja_de_Calificaci_n_An_lisis_Financiero__c/fields/Relaci_n_Deuda_Ingreso__c.field-meta.xml
<CustomField>
    <fullName>Relaci_n_Deuda_Ingreso__c</fullName>
    <defaultValue>0.5</defaultValue>
    <label>Relación Deuda - Ingreso</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>