force-app/main/default/objects/Hoja_de_Calificaci_n_An_lisis_Financiero__c/fields/Renovaci_n_de_C_mara_de_Comercio__c.field-meta.xml
<CustomField>
    <fullName>Renovaci_n_de_C_mara_de_Comercio__c</fullName>
    <label>¿Renovación de Cámara de Comercio?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sí</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>