force-app/main/default/objects/Hoja_de_Calificaci_n_An_lisis_Financiero__c/fields/Total_Activo__c.field-meta.xml
<CustomField>
    <fullName>Total_Activo__c</fullName>
    <label>Total Activo</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>